fix(Label): prefix and suffix not being aligned on the sides, and make box take all the padding and margin

--- a/src/components/bedrock/Label.css
+++ b/src/components/bedrock/Label.css
@@ -1,11 +1,12 @@
 .outer-div {
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     /* Ensures Label contents are centered initially */
     align-items: center;
     background-color: rgb(145, 145, 145);
     overflow: hidden;
-    padding-bottom: calc(var(--minecraftdepth) * 2);
+    padding-bottom: calc(var(--minecraftdepth) * 2);;
 }
 
 .inner-div {
@@ -27,22 +28,28 @@
     justify-content: space-between;
     /* Keeps prefix and suffix on their sides */
     position: relative;
-    /* For absolute centering of the text */
+    padding: var(--minecraftdepth);
+    box-sizing: border-box;
 }
 
 
 .prefix,
 .suffix {
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.prefix,
-.suffix,
+.prefix p,
+.suffix p,
 .center,
 .center p {
-    margin: 0;
+    margin: 0px;
     /* Remove any default margin */
-    padding: 0;
+    padding: 0px;
+    vertical-align: middle;
 
 
     /* Remove default padding */
@@ -51,13 +58,19 @@
 }
 
 .prefix {
-    flex: 0 0 auto;
+    display: flex; /* Enforces flex container */
+    flex-direction: row; /* Horizontal alignment */
+    align-items: center; /* Vertical alignment */
+    justify-content: flex-start; /* Align items to the right (optional) */
+    margin-right: auto;
     /* Fix prefix size to content */
 }
 
 .suffix {
-    flex: 0 0 auto;
-    /* Fix suffix size to content */
+    display: flex; /* Enforces flex container */
+    flex-direction: row; /* Horizontal alignment */
+    align-items: center; /* Vertical alignment */
+    justify-content: flex-end; /* Align items to the right (optional) */
     margin-left: auto;
     /* Push it to the far right */
 }
